[package]
name = "tracing-ext-ffi-subscriber"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com"
]
description = "Simple forwarding tracing subscriber for a FFI host profiler."
repository = "https://github.com/EmbarkStudios/tracing-ext-ffi-subscriber"
keywords = [ "ffi", "tracing", "profiling" ]
categories = [ "profiling" ]

[dependencies]
parking_lot = "0.12"
tracing = "0.1"

[build-dependencies]
cbindgen = "0.23"
